--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
 <html>
   <head>
-    <title>Our Funky HTML Page</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+    <title>StariumXCV</title>
+
+    <style>
+      body {
+        background-color: black;
+        color: white;
+        text-align: center;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      h1 {
+        
+      }
+      
+    </style>
   </head>
   <body>
+    <img src="https://starium-images.s3.amazonaws.com/images/starium_banner.png">
     <h1>Under Construction</h1>
     <p>StariumXCV is currently offline. It'll be back soon!</p>
   </body>
