--- a/index.html
+++ b/index.html
@@ -4,23 +4,33 @@
     <title>StariumXCV</title>
 
     <style>
+      html {
+        background-image: "https://starium-images.s3.amazonaws.com/images/starfield_xcv_1.png";
+      }
       body {
-        background-color: black;
+        background-color: #003366;
         color: white;
         text-align: center;
-        width: 100vw;
+        max-width: 700px;
         height: 100vh;
+        margin: auto;
+      }
+
+      #banner {
+        width: 100%;
+        height: auto;
       }
 
       h1 {
-        
+        color: #CCAA33;
       }
       
     </style>
   </head>
   <body>
-    <img src="https://starium-images.s3.amazonaws.com/images/starium_banner.png">
+    <img id="banner" src="https://starium-images.s3.amazonaws.com/images/banners/stariumxcv_banner_sunset_1024x768.png">
     <h1>Under Construction</h1>
     <p>StariumXCV is currently offline. It'll be back soon!</p>
+    <img src="https://starium-images.s3.amazonaws.com/images/full_suns/2_full_sun_9.gif">
   </body>
 </html>
