--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 
     <style>
       html {
-        background-image: "https://starium-images.s3.amazonaws.com/images/starfield_xcv_1.png";
+        background-image: url("https://starium-images.s3.amazonaws.com/images/starfield_xcv_1.png");
+        font-family: Ariel, Sans-serif;
       }
       body {
-        background-color: #003366;
+        background-color: rgba(0,0,0,0.8);
         color: white;
         text-align: center;
         max-width: 700px;
         height: 100vh;
-        margin: auto;
+        margin: auto; 
+        font-size: 1.5em;
       }
 
       #banner {
@@ -23,14 +25,27 @@
 
       h1 {
         color: #CCAA33;
+        font-familt: Serif;
+        font-size: 3em;
+      }
+
+      p {
+        margin-bottom: 3em;
+      }
+
+      #content {
+        width: 100%;
+        
       }
       
     </style>
   </head>
   <body>
     <img id="banner" src="https://starium-images.s3.amazonaws.com/images/banners/stariumxcv_banner_sunset_1024x768.png">
-    <h1>Under Construction</h1>
-    <p>StariumXCV is currently offline. It'll be back soon!</p>
-    <img src="https://starium-images.s3.amazonaws.com/images/full_suns/2_full_sun_9.gif">
+    <div id="content">
+      <h1>Under Construction</h1>
+      <p>StariumXCV is currently offline. We'll be back soon!</p>
+      <img src="https://starium-images.s3.amazonaws.com/images/full_suns/2_full_sun_9.gif">
+    </div>
   </body>
 </html>
