--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
       }
 
-      @media screen and (max-width: 480px) {
+      @media only screen and (max-width: 600px) {
         body {
           width: 100%;
           font-size: 2em;
